<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.AppCompatTextView android:id="@+id/textView_teamAName"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:fontFamily="@font/roboto" android:text="@string/teamA" android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView_VS"
        app:layout_constraintEnd_toStartOf="@+id/textView_VS"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView_VS" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView_VS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/typer_roboto_regular"
        android:text="@string/VS"
        android:textColor="@color/football_red"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.22" />

    <androidx.appcompat.widget.AppCompatTextView android:id="@+id/textView_teamBName"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:fontFamily="@font/roboto" android:text="@string/teamB" android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView_VS"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView_VS"
        app:layout_constraintTop_toTopOf="@+id/textView_VS" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_matchTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:text="@string/match_time1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.175"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_VS"
        app:layout_constraintVertical_bias="0.6" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/match_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/match_date1"
        app:layout_constraintBottom_toBottomOf="@+id/text_matchTime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintStart_toEndOf="@+id/text_matchTime"
        app:layout_constraintTop_toTopOf="@+id/text_matchTime"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:background="@drawable/round_button_start_football"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/text_matchTime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.646"
        app:layout_constraintStart_toEndOf="@+id/match_date"
        app:layout_constraintTop_toTopOf="@+id/text_matchTime"
        app:layout_constraintVertical_bias="0.5"
        tools:text="@string/start_match" />

    <View
        android:id="@+id/view123"
        android:layout_width="280dp"
        android:layout_height="0.5dp"
        android:layout_marginTop="10dp"
        android:background="@color/football_red"
        android:fadingEdge="horizontal|vertical"
        android:fadingEdgeLength="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_matchTime"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>