<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView_overs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:text="@string/overs"
        app:layout_constraintBottom_toBottomOf="@+id/textView_over"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView_over"
        app:layout_constraintTop_toTopOf="@+id/textView_over" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView_over"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/over"
        app:layout_constraintBottom_toBottomOf="@+id/textView_fieldingTeam"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView_runs"
        app:layout_constraintTop_toTopOf="@+id/textView_fieldingTeam" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView_wickets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:text="@string/g1"
        app:layout_constraintBottom_toBottomOf="@+id/textView_slash"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toEndOf="@+id/textView_slash"
        app:layout_constraintTop_toTopOf="@+id/textView_slash"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView_slash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:text="@string/slash"
        app:layout_constraintBottom_toBottomOf="@+id/textView_runs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.18"
        app:layout_constraintStart_toEndOf="@+id/textView_runs"
        app:layout_constraintTop_toTopOf="@+id/textView_runs"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/textView_runs"
        android:layout_width="41dp"
        android:layout_height="26dp"
        android:background="#00FFFFFF"
        android:ems="10"
        android:inputType="number"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView_battingTeam"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView_battingTeam"
        app:layout_constraintTop_toTopOf="@+id/textView_battingTeam" />

<!--    <androidx.appcompat.widget.AppCompatTextView-->
<!--        android:id="@+id/textView_runs"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/runs"-->
<!--        app:layout_constraintBottom_toBottomOf="@+id/textView_battingTeam"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toEndOf="@+id/textView_battingTeam"-->
<!--        app:layout_constraintTop_toTopOf="@+id/textView_battingTeam" />-->

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView_targetScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/targetScore"
        app:layout_constraintBottom_toBottomOf="@+id/textView_target"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView_target"
        app:layout_constraintTop_toTopOf="@+id/textView_target" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView_target"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/target"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_fieldingTeam" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView_live"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/live"
        android:textColor="@color/live_red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.08" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView_battingTeam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/teamA"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView_live"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_live"
        app:layout_constraintVertical_bias="0.04" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView_fieldingTeam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/teamB"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView_battingTeam"
        app:layout_constraintStart_toStartOf="@+id/textView_battingTeam"
        app:layout_constraintTop_toBottomOf="@+id/textView_battingTeam"
        app:layout_constraintVertical_bias="0.37" />

    <View
        android:id="@+id/view123"
        android:layout_width="280dp"
        android:layout_height="0.5dp"
        android:layout_marginTop="30dp"
        android:background="@color/cricket_green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_target" />

    <Button
        android:id="@+id/button2"
        android:layout_width="80dp"
        android:layout_height="35dp"
        android:background="@drawable/round_button_start_cricket"
        android:fontFamily="sans-serif-medium"
        android:text="@string/end_match"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/textView_targetScore"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.88"
        app:layout_constraintStart_toEndOf="@+id/textView_live"
        app:layout_constraintTop_toTopOf="@+id/textView_targetScore"
        tools:text="@string/end_match" />

    <Button
        android:id="@+id/button8"
        android:layout_width="30dp"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/round_button_start_cricket"
        android:text="@string/plus"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/textView_overs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView_overs"
        app:layout_constraintTop_toTopOf="@+id/textView_overs" />

    <Button
        android:id="@+id/button9"
        android:layout_width="30dp"
        android:layout_height="20dp"
        android:layout_marginBottom="2dp"
        android:background="@drawable/round_button_start_cricket"
        android:text="@string/plus"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/textView_runs"
        app:layout_constraintEnd_toEndOf="@+id/textView_runs"
        app:layout_constraintStart_toStartOf="@+id/textView_runs"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button10"
        android:layout_width="30dp"
        android:layout_height="20dp"
        android:background="@drawable/round_button_start_cricket"
        android:text="@string/plus"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/button9"
        app:layout_constraintEnd_toEndOf="@+id/textView_wickets"
        app:layout_constraintStart_toStartOf="@+id/textView_wickets"
        app:layout_constraintTop_toTopOf="@+id/button9"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button11"
        android:layout_width="30dp"
        android:layout_height="20dp"
        android:background="@drawable/round_button_start_football"
        android:text="@string/minus"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/textView_runs"
        app:layout_constraintStart_toStartOf="@+id/textView_runs"
        app:layout_constraintTop_toBottomOf="@+id/textView_runs" />

    <Button
        android:id="@+id/button12"
        android:layout_width="30dp"
        android:layout_height="20dp"
        android:background="@drawable/round_button_start_football"
        android:text="@string/minus"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/button11"
        app:layout_constraintEnd_toEndOf="@+id/textView_wickets"
        app:layout_constraintStart_toStartOf="@+id/textView_wickets"
        app:layout_constraintTop_toTopOf="@+id/button11" />

    <Button
        android:id="@+id/button13"
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/change_innings"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="@+id/textView_live"
        app:layout_constraintHorizontal_bias="0.154"
        app:layout_constraintStart_toStartOf="@+id/textView_live"
        app:layout_constraintTop_toTopOf="@+id/button2" />


</androidx.constraintlayout.widget.ConstraintLayout>